# easysearch-mcp-server

./: .gitignore  README.md  pyproject.toml
.kiro/settings/: mcp.json
src/easysearch_mcp/: __init__.py  client.py  server.py
src/easysearch_mcp/tools/: __init__.py  cat.py  cluster.py  documents.py  ilm.py  indices.py  ingest.py  nodes.py  search.py  slm.py  snapshot.py  tasks.py
